tests/compile_fail/scoped/eq.stderr
error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'id` due to conflicting requirements
 --> $DIR/eq.rs:4:39
  |
4 |     Scoped::with(|a| Scoped::with(|b| assert_eq!(a, b)))
  |                                       ^^^^^^^^^^^^^^^^
  |
note: first, the lifetime cannot outlive the anonymous lifetime #2 defined on the body at 4:35...
 --> $DIR/eq.rs:4:35
  |
4 |     Scoped::with(|a| Scoped::with(|b| assert_eq!(a, b)))
  |                                   ^^^^^^^^^^^^^^^^^^^^
note: ...so that the expression is assignable
 --> $DIR/eq.rs:4:39
  |
4 |     Scoped::with(|a| Scoped::with(|b| assert_eq!(a, b)))
  |                                       ^^^^^^^^^^^^^^^^
  = note: expected  `pui::scoped::Scoped<'_>`
             found  `pui::scoped::Scoped<'_>`
note: but, the lifetime must be valid for the anonymous lifetime #2 defined on the body at 4:18...
 --> $DIR/eq.rs:4:18
  |
4 |     Scoped::with(|a| Scoped::with(|b| assert_eq!(a, b)))
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...so that the types are compatible
 --> $DIR/eq.rs:4:39
  |
4 |     Scoped::with(|a| Scoped::with(|b| assert_eq!(a, b)))
  |                                       ^^^^^^^^^^^^^^^^
  = note: expected  `std::cmp::PartialEq<pui::scoped::Scoped<'_>>`
             found  `std::cmp::PartialEq`
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
